--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hej, Jag heter Xin."
+description: "Hej, jag heter Xin och kommer från KINA."
 header-img: "img/about-xin.jpg"
 ---
 
