--- a/about.html
+++ b/about.html
@@ -7,12 +7,12 @@ header-img: "img/about-xin.jpg"
 
 <!-- Language Selector -->
 <select onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
-    <option value="0" selected> 中文 Chinese </option>
-    <option value="1"> 英语 English </option>
+    <option value="0" selected> 英文 English </option>
+    <option value="1"> 中文 Chinese </option>
 </select>
 
-<!-- Chinese Version -->
-<div class="zh">
+<!-- English Version -->
+<div class="en">
     <blockquote>
         写写代码，做做设计，看看产品。
     </blockquote>
@@ -29,7 +29,8 @@ header-img: "img/about-xin.jpg"
     <p>人类，唱唱通俗跳跳 HipHop ，也爱好打球游泳、摄影<del>把妹</del>，没事泡泡社交网络，刷刷微博知乎</p>
 
     <p>哦对了，我叫<b>黄玄</b>
-
+    
+    <!--
     <hr>
     附上认真版的简历:
     <ul class="active-list">
@@ -39,6 +40,7 @@ header-img: "img/about-xin.jpg"
         <li><a href="{{site.baseUrl}}/attach/2015_Hux_UX & PD_cn.pdf"> 2015_Hux_UX & PD_cn </a></li>
         <li><a href="{{site.baseUrl}}/attach/2015_Hux_UX & PD_en.pdf"> 2015_Hux_UX & PD_en </a></li>
     </ul>
+    -->
 
     一些期待成为的角色:
     <ul>
@@ -50,8 +52,8 @@ header-img: "img/about-xin.jpg"
     </ul>
 </div>
 
-<!-- English Version -->
-<div class="en">
+<!-- Chinese Version -->
+<div class="zh">
     <blockquote>
         Designer or Engineer, things in between.
     </blockquote>
