--- a/about.html
+++ b/about.html
@@ -14,6 +14,19 @@ header-img: "img/about-xin.jpg"
 <!-- English Version -->
 <div class="en">
     <blockquote>
+        Motivation is what gets you started. Habit is what keeps you going.
+    </blockquote>
+
+    <p>Master's student with knowledge in computer systems and networks at Chalmer University of Technology, Sweden.</p>
+    <p>I would really like to work with cloud systems and contribute to solving thorny problems. I have strong knowledge of Python and have been developing software using Python for several projects. And I have several open-source projects on <a href="https://github.com/HansonHH">Github</a>.</p>
+    <p>As a person, I’m calm and humble. In addition, I’m a self-motivated learner since I’m very interested in new technologies and I learn things quickly.</p>
+    <p>In my spare time, I play football with my friends on weekends. And I try to be outdoors in nature as often as possible since I love trekking. I also love traveling since it gives me opportunities to know diverse cultures.</p>
+
+</div>
+
+<!--
+<div class="en">
+    <blockquote>
         写写代码，做做设计，看看产品。
     </blockquote>
 
@@ -30,7 +43,6 @@ header-img: "img/about-xin.jpg"
 
     <p>哦对了，我叫<b>黄玄</b>
     
-    <!--
     <hr>
     附上认真版的简历:
     <ul class="active-list">
@@ -40,7 +52,6 @@ header-img: "img/about-xin.jpg"
         <li><a href="{{site.baseUrl}}/attach/2015_Hux_UX & PD_cn.pdf"> 2015_Hux_UX & PD_cn </a></li>
         <li><a href="{{site.baseUrl}}/attach/2015_Hux_UX & PD_en.pdf"> 2015_Hux_UX & PD_en </a></li>
     </ul>
-    -->
 
     一些期待成为的角色:
     <ul>
@@ -51,6 +62,8 @@ header-img: "img/about-xin.jpg"
         <li> "Full Stack" Engineer/Designer </li>
     </ul>
 </div>
+-->
+
 
 <!-- Chinese Version -->
 <div class="zh">
