--- a/about.html
+++ b/about.html
@@ -17,11 +17,17 @@ header-img: "img/about-xin.jpg"
         Motivation is what gets you started. Habit is what keeps you going.
     </blockquote>
 
-    <p>Master's student with knowledge in computer systems and networks at Chalmer University of Technology, Sweden.</p>
+    <p>Master's student with knowledge in computer systems and networks at Chalmers University of Technology, Sweden.</p>
     <p>I would really like to work with cloud systems and contribute to solving thorny problems. I have strong knowledge of Python and have been developing software using Python for several projects. And I have several open-source projects on <a href="https://github.com/HansonHH">Github</a>.</p>
     <p>As a person, I’m calm and humble. In addition, I’m a self-motivated learner since I’m very interested in new technologies and I learn things quickly.</p>
     <p>In my spare time, I play football with my friends on weekends. And I try to be outdoors in nature as often as possible since I love trekking. I also love traveling since it gives me opportunities to know diverse cultures.</p>
 
+</div>
+
+<!-- Chinese Version -->
+<div class="zh">
+    <p>瑞典查尔姆斯理工大学地在读研究生一枚， 对计算机网络和系统有一定见解。</p>
+    <p>我愿意钻研云计算系统并喜欢挑战难题。 个人的第一编程语言是Python,且已用Python开发过几个个人开源项目，详情请查看<a href="https://github.com/HansonHH">Github</a></p>
 </div>
 
 <!--
