--- a/about.html
+++ b/about.html
@@ -26,8 +26,8 @@ header-img: "img/about-xin.jpg"
 
 <!-- Chinese Version -->
 <div class="zh">
-    <p>瑞典查尔姆斯理工大学地在读研究生一枚， 对计算机网络和系统有一定见解。</p>
-    <p>我愿意钻研云计算系统并喜欢挑战难题。 个人的第一编程语言是Python,且已用Python开发过几个个人开源项目，详情请查看<a href="https://github.com/HansonHH">Github</a></p>
+    <p>瑞典查尔姆斯理工大学地在读研究生一枚，对计算机网络和系统有一定见解。</p>
+    <p>我愿意钻研云计算系统并喜欢挑战难题。个人的第一编程语言是Python,且已用Python开发过数个个人开源项目，详情请查看<a href="https://github.com/HansonHH">Github</a></p>
 </div>
 
 <!--
